# agentic-slack-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: docker-publish.yml
assets/: agent_prompt.yaml  prompt.yaml  slack_bot_resources.yaml  slack_i18n.yaml
config/: agent.yaml  message.yaml  rag.yaml  slack.yaml
resources/: agent.yaml  slack.yaml
src/: common.py  main.py
src/agent/: __init__.py  agent.py  chain.py  parser.py  run.py  supervisor.py
src/agent/tool/: __init__.py  google_search.py  markitdown_crawler.py  slack_conversation.py  types.py  utils.py
src/config/: __init__.py  agent.py  base.py  client.py  config.py  logger.py  message.py  model.py  prompt.py  rag.py  slack.py  tracking.py
src/loader/: slack.py
src/mcp/: crawler.py
src/mcp_server/: __main__.py  tool.py
src/rag_loader/: slack.py
src/slack/: __init__.py  bot.py  client.py
src/slack_bot/: __main__.py  bot.py  client.py  types.py
src/streamlit_web/: app.py  👋_Hello.py
src/streamlit_web/pages/: 1_😀_Emoji_Sentiment.py  2_🕷️_Markitdown_Crawler.py  3_🌏_Custom_Google_Search.py  3_🤖_Chatbot.py  4_💬_Slack_Conversations.py  5_🔍_Slack_Search.py  5_🤖_Agentic_Chatbot.py  6_🤖_Agentic_Chatbot.py  7_🛠️_MCP_Server.py
src/tracking/: __init__.py  base.py  langfuse.py  langfuse_tracker.py  langsmith.py  stdout.py  stdout_tracker.py
