[project]
name = "agentic-slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "backoff>=2.2.1",
    "emoji-sentiment>=0.0.5",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.1.3",
    "langfuse>=2.60.3",
    "langgraph>=0.3.34",
    "pydantic-settings>=2.9.1",
    "pydantic-settings-yaml>=0.2.0",
    "rich>=14.0.0",
    "slack-bolt>=1.23.0",
    "structlog>=25.3.0",
]
