[project]
name = "agentic-slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "backoff>=2.2.1",
    "emoji-sentiment>=0.0.5",
    "google-cloud-discoveryengine>=0.13.8",
    "langchain-google-community>=2.0.7",
    "langchain-google-vertexai>=2.0.4",
    "langchain-qdrant>=0.2.0",
    "langfuse>=2.60.3",
    "langgraph>=0.3.34",
    "langgraph-checkpoint-mongodb>=0.1.3",
    "langgraph-supervisor>=0.0.20",
    "langmem>=0.0.25",
    "langsmith>=0.3.38",
    "markitdown>=0.1.1",
    "mcp>=1.6.0",
    "plotly>=6.0.1",
    "pydantic-settings>=2.9.1",
    "pydantic-settings-yaml>=0.2.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.11.3",
    "rich>=14.0.0",
    "slack-bolt>=1.23.0",
    "streamlit>=1.45.0",
    "structlog>=25.3.0",
    "ua-generator>=2.0.5",
]
